revised notebook data_size_effect

--- a/data_size_effect.ipynb
+++ b/data_size_effect.ipynb
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### However, the resolution becomes arbitarily small which very large dataset, and it's up to the physical context of the data to determine when the impact of the large data size becomes unrealistic. "
+    "### However, the resolution becomes arbitarily small which very large dataset, proportional to 1/sqrt(data size), and it's up to the physical context of the data to determine when the impact of the large data size becomes unrealistic. "
    ]
   },
   {
@@ -192,7 +192,8 @@
     }
    ],
    "source": [
-    "sample = 0.001\n",
+    "# Try a sample much closer to the center of the population, 1/1000 of the sigma. And a much larger dataset.\n",
+    "sample = 0.001 \n",
     "data_size = 10000000\n",
     "population = S.norm.rvs(loc = 0, scale = 1, size = data_size, random_state=1)\n",
     "x, p_value = S.ttest_1samp(population,sample)\n",
