revised data_size_effect.ipynb

--- a/data_size_effect.ipynb
+++ b/data_size_effect.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Effect of Data Size on Statistical Tests\n",
     "\n",
-    "### Statistical tests become sensitive as data sizes increase. Alternative tests such as the Cohen's D have to be used. This notebook shows how the 1 sample t-test e.g. is impacted by data size. "
+    "### Statistical tests become sensitive as data sizes increase, and alternative tests such as the Cohen's D have to be used. This notebook shows how the 1 sample t-test e.g. is impacted by data size. "
    ]
   },
   {
@@ -131,14 +131,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Graphically, the larger data has a smoother histrogram, makes it easier to determin the center of the peak.  Clearly, some resolution improvement makes sense. "
+    "### Graphically, the larger data has a smoother histrogram, making it easier to determine the center of the peak.  Clearly, some resolution improvement makes sense. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### However, the resolution becomes arbitarily small which very large dataset, proportional to 1/sqrt(data size), and it's up to the physical context of the data to determine when the impact of the large data size becomes unrealistic. "
+    "### However, the resolution becomes arbitarily small with very large dataset, proportional to 1/sqrt(data size), and it's up to the user to determine when the impact of the large data size becomes unrealistic based on the physical context of the data. "
    ]
   },
   {
